--- a/xfstests/local.config
+++ b/xfstests/local.config
@@ -7,6 +7,13 @@ export FUSE_SUBTYP=.passthrough
 export MOUNT_OPTIONS=""
 export TEST_FS_MOUNT_OPTS=""
 
-export PASSTHROUGH_PATH=<path-to-libfuse-build>/example/passthrough_hp
+# If PASSTHROUGH_PATH is unset, the mount helper is going to look
+# for the binary '${FUSE_SUBTYP}', though omitting the leading dot '.'.
+# Example:
+#       with FUSE_SUBTYP=".passthrough", the mount helper is called
+#       'mount.fuse.passthrough' and that would try to run
+#       'passthrough'.
+# export PASSTHROUGH_PATH=<path-to-libfuse-build>/example/passthrough_hp
+
 export SCRATCH_SOURCE=/mnt/src/scratch
 export TEST_SOURCE=/mnt/src/test
