Add minimal token permissions
Signed-off-by: Pedro Kaj Kjellerup Nacht <pnacht@google.com>

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: [master]
 
+permissions:
+  contents: read
+
 jobs:
   codespell:
     name: Check for spelling errors
