--- a/util/fuse.conf
+++ b/util/fuse.conf
@@ -1,11 +1,11 @@
 # The file /etc/fuse.conf allows for the following parameters:
 #
-# user_allow_other - Using the allow_other mount option works fine as root, in
-# order to have it work as user you need user_allow_other in /etc/fuse.conf as
-# well. (This option allows users to use the allow_other option.) You need
-# allow_other if you want users other than the owner to access a mounted fuse.
-# This option must appear on a line by itself. There is no value, just the
-# presence of the option.
+# user_allow_other - Using the allow_other mount option works fine as root, but
+# in order to have it work as a regular user, you need to set user_allow_other
+# in /etc/fuse.conf as well. This option allows non-root users to use the
+# allow_other option. You need allow_other if you want users other than the
+# owner of a mounted fuse to access it. This option must appear on a line by
+# itself. There is no value; just the presence of the option activates it.
 
 #user_allow_other
 
