Remove dated comment from mount_max usage instructions

--- a/util/fuse.conf
+++ b/util/fuse.conf
@@ -11,7 +11,7 @@
 
 
 # mount_max = n - this option sets the maximum number of mounts.
-# Currently (2014) it must be typed exactly as shown
-# (with a single space before and after the equals sign).
+# It must be typed exactly as shown (with a single space before and after the
+# equals sign).
 
 #mount_max = 1000
