--- a/xfstests/local.config
+++ b/xfstests/local.config
@@ -7,6 +7,6 @@ export FUSE_SUBTYP=.passthrough
 export MOUNT_OPTIONS=""
 export TEST_FS_MOUNT_OPTS=""
 
-PASSTHROUGH_PATH=/home/nikratio/libfuse/build/example/passthrough_hp
-SCRATCH_SOURCE=/mnt/src/scratch
-TEST_SOURCE=/mnt/src/test
+export PASSTHROUGH_PATH=<path-to-libfuse-build>/example/passthrough_hp
+export SCRATCH_SOURCE=/mnt/src/scratch
+export TEST_SOURCE=/mnt/src/test
