--- a/xfstests/local.config
+++ b/xfstests/local.config
@@ -1,7 +1,9 @@
-export TEST_DEV=non1
+export TEST_DEV=source:/mnt/src/test
 export TEST_DIR=/mnt/test
-export SCRATCH_DEV=non2
+
+export SCRATCH_DEV=source:/mnt/src/scratch
 export SCRATCH_MNT=/mnt/scratch
+
 export FSTYP=fuse
 export FUSE_SUBTYP=.passthrough
 export MOUNT_OPTIONS=""
@@ -14,6 +16,3 @@ export TEST_FS_MOUNT_OPTS=""
 #       'mount.fuse.passthrough' and that would try to run
 #       'passthrough'.
 # export PASSTHROUGH_PATH=<path-to-libfuse-build>/example/passthrough_hp
-
-export SCRATCH_SOURCE=/mnt/src/scratch
-export TEST_SOURCE=/mnt/src/test
