--- a/example/meson.build
+++ b/example/meson.build
@@ -35,6 +35,10 @@ if not platform.endswith('bsd') and platform != 'dragonfly' and add_languages('c
     executable('passthrough_hp', 'passthrough_hp.cc',
                dependencies: [ thread_dep, libfuse_dep ],
                install: false)
+
+    executable('custom_mem_bufv_ll', 'custom_mem_bufv_ll.cc',
+               dependencies: [ thread_dep, libfuse_dep ],
+               install: false)
 endif
 
 # TODO: Link passthrough_fh with ulockmgr if available
